# meetings-2022

./: .gitignore  README.md  run.sh
.github/workflows/: pandoc.yml
src/: 2022-01-15.md  _header.md  bib.bib
src/2022-01-15/: _header.md  commands.sh  main.cc  main.md  main.py
src/2022-01-16/: _header.md  commands.sh  main.md
src/2022-01-22/: _header.md  commands.sh  main.cc  main.md  strings.cc  vectores.cc
src/2022-01-23/: .gitignore.sample  CMakeLists.txt  _header.md  commands.sh  main.md
src/2022-01-23/src/: CMakeLists.txt  main.cc  sample.cc
src/2022-01-29/: _header.md  commands.sh  main.md
src/2022-01-29/cpp/: main.cc
src/2022-01-30/: _header.md  main.md
src/2022-02-05/: _header.md  main.md
src/2022-02-06/: _header.md  main.md
src/2022-02-12/: _header.md  main.md
src/2022-02-13/: _header.md
src/2022-02-19/: _header.md  main.md
src/2022-02-20/: _header.md  main.md
src/2022-02-26/: _header.md  main.md
src/2022-02-27/: _header.md  main.md
src/2022-03-05/: _header.md  main.md
src/2022-03-06/: _header.md  main.md
src/2022-03-12/: _header.md  main.md
src/2022-03-13/: _header.md  main.md
src/2022-03-19/: _header.md  main.md  recipe-integration.cc  recipe-iterate-over-grid.cc
src/2022-03-20/: _header.md  main.md  recipe-iterate-over-grid.cc
src/2022-05-02/: CMakeLists.txt  _header.md  complex.cc  exercise1.cc  exercise2.cc  exercise3.cc  hello-matplotlib.cc  main.md  session1.cc
src/2022-05-02/demo/: complex.cc  exercise1.cc  exercise2.cc  exercise3.cc  session1.cc  student.hh  test.cc
src/2022-05-02/plot/: CMakeLists.txt  eigen-matplotlib.cc  hello-matplotlib.cc
src/2022-05-08/: _header.md  arraylist.cc  field-vector.cc  fmt-vector.cc  main.md  matrix.cc  polynomial.cc  vector.cc
src/2022-05-08/dune-vector-learn/: CMakeLists.txt  config.h.cmake  dune-vector-learn.cc  dune-vector-learn.pc.in  dune.module  field-vector.cc  fmt-vector.cc  identity.cc  matrix.cc  polynomial.cc  populate.cc  upperlower.cc  vector.cc
src/2022-05-09/: _header.md  function.cc  main.md
src/2022-05-09/cpp20/: hello.cpp
src/2022-05-09/src/: CMakeLists.txt  PreLoad.cmake  exercise1.cc  exercise2.cc  exercise3.cc  exercise4.cc  exercise5.cc  expression.cc  test2.cc  test3.cc
src/2022-05-15/: _header.md  main.md
src/2022-05-15/src/: CMakeLists.txt  example.cc  helloautodiff.cc  main.cc  matrices.cc  multiautodiff.cc  secondautodiff.cc
src/2022-05-16/: _header.md  function.cc  main.md  test.cc
src/2022-05-16/cpp20/: CMakeLists.txt
src/2022-05-16/plot/: CMakeLists.txt  demo.cc  dune-test-vector.cc  main.cc  plot.cc  termplotlib.py
src/2022-10-23/: _header.md  biblio.bib  main.md
